Fix Prometheus endpoints and production configuration - Enable Prometheus endpoints in application-production.properties - Fix Redis configuration issues - Clean up docker-compose.prod.yml duplicates - Add database initialization scripts