@@ -1,30 +1,41 @@
 package com.bankportal.accountservice.security;
 
+import java.io.IOException;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+
+import javax.crypto.SecretKey;
+
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpHeaders;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.util.StringUtils;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.filter.OncePerRequestFilter;
+
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.security.Keys;
-import java.io.IOException;
-import java.util.Collections;
-import java.util.List;
-import org.springframework.web.filter.OncePerRequestFilter;
 
 @Configuration
+@EnableWebSecurity
 public class SecurityConfig {
 
     // JWT Secret - sollte identisch mit dem Auth-Service sein
@@ -35,19 +46,23 @@ public class SecurityConfig {
         http
                 .csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
-                        // Health check endpoints (für Docker Health Checks)
+                        // KRITISCH: Actuator Endpoints MÜSSEN freigegeben werden
+                        .requestMatchers("/actuator/**").permitAll()
+                        
+                        // Health check endpoints
                         .requestMatchers("/api/health").permitAll()
                         .requestMatchers("/health").permitAll()
-                        
-                        // Actuator Endpoints erlauben (für Health Checks)
-                        .requestMatchers("/actuator/**").permitAll()
                         
                         // Swagger/OpenAPI endpoints
                         .requestMatchers("/swagger-ui/**").permitAll()
                         .requestMatchers("/swagger-ui.html").permitAll()
                         .requestMatchers("/api-docs/**").permitAll()
                         .requestMatchers("/v3/api-docs/**").permitAll()
+                        
+                        // Test endpoints
+                        .requestMatchers("/api/test/**").permitAll()
                         
                         // API Endpoints benötigen Authentifizierung
                         .requestMatchers("/api/accounts/**").authenticated()
@@ -59,10 +74,23 @@ public class SecurityConfig {
     }
 
     @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
+
+    @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("*"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        
+        // CORS Origins aus Environment Variable
+        String allowedOrigins = System.getenv("CORS_ALLOWED_ORIGINS");
+        if (allowedOrigins != null && !allowedOrigins.isEmpty()) {
+            configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        } else {
+            configuration.setAllowedOrigins(List.of("http://localhost:4200", "http://localhost"));
+        }
+        
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
 
@@ -79,8 +107,18 @@ public class SecurityConfig {
                 FilterChain chain)
                 throws ServletException, IOException {
 
-            // Actuator Endpoints überspringen (keine JWT-Validierung)
-            if (request.getRequestURI().startsWith("/actuator/")) {
+            String requestURI = request.getRequestURI();
+            
+            // UPDATED: Actuator Endpoints komplett überspringen (inklusive Prometheus)
+            if (requestURI.startsWith("/actuator/")) {
+                chain.doFilter(request, response);
+                return;
+            }
+            
+            // Health und Test Endpoints überspringen
+            if (requestURI.startsWith("/health") || 
+                requestURI.startsWith("/api/health") || 
+                requestURI.startsWith("/api/test/")) {
                 chain.doFilter(request, response);
                 return;
             }
@@ -90,11 +128,13 @@ public class SecurityConfig {
             if (StringUtils.hasText(header) && header.startsWith("Bearer ")) {
                 String token = header.substring(7);
                 try {
-                    Claims claims = Jwts.parserBuilder()
-                            .setSigningKey(Keys.hmacShaKeyFor(jwtSecret.getBytes()))
+                    // KORRIGIERT: JWT 0.12.3 Syntax
+                    SecretKey key = Keys.hmacShaKeyFor(jwtSecret.getBytes());
+                    Claims claims = Jwts.parser()
+                            .verifyWith(key)
                             .build()
-                            .parseClaimsJws(token)
-                            .getBody();
+                            .parseSignedClaims(token)
+                            .getPayload();
 
                     String username = claims.getSubject();
                     if (username != null) {
